--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
-body,
 html,
-#root {
-  margin: 0;
+body,
+#root,
+canvas {
   width: 100%;
   height: 100%;
+  margin: 0;
   overflow: hidden;
 }
 
